feat: Adicionando a responsividade e js para o menu haburguinho.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="styles/desktop.css">
     <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/mobile.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,13 +33,33 @@
           <li>Como você pode nos ajudar</li>
         </ul>
         <ul>
-            <li>Nossa comunidade</li>
-            <li>
-              <button class="nav-button">
-                Entrar em contato
-              </button>
-            </li>
-          </ul>
+          <li>Nossa comunidade</li>
+          <li>
+            <button class="nav-button">
+              Entrar em contato
+            </button>
+          </li>
+        </ul>
+      </nav>
+      <button class="menu-hamburger">
+        <hr/>
+        <hr/>
+        <hr/>
+      </button>
+      <nav class="header-nav-responsive">
+        <ul>
+          <li>Nossa História</li>
+          <li>Projetos</li>
+          <li>Como você pode nos ajudar</li>
+        </ul>
+        <ul>
+          <li>Nossa comunidade</li>
+          <li>
+            <button class="nav-button">
+              Entrar em contato
+            </button>
+          </li>
+        </ul>
       </nav>
     </header>
     <section class="section-one">
@@ -94,7 +115,99 @@
             </svg>            
         </div>
         <div class="div-svg-two">
-          <svg width="652" height="619" viewBox="0 0 652 619" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <div class="div-svg-music">
+            <svg id="svg-1" width="33" height="35" viewBox="0 0 33 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g filter="url(#filter0_b_1011_4733)">
+              <rect width="32.66" height="34.7566" rx="8.33695" fill="#7E1ECB" fill-opacity="0.3"/>
+              <path d="M15.9798 21.5564C15.9798 22.2934 15.6871 23.0003 15.1659 23.5214C14.6447 24.0426 13.9379 24.3354 13.2009 24.3354C12.4638 24.3354 11.757 24.0426 11.2358 23.5214C10.7147 23.0003 10.4219 22.2934 10.4219 21.5564C10.4219 20.8194 10.7147 20.1125 11.2358 19.5914C11.757 19.0702 12.4638 18.7774 13.2009 18.7774C13.9379 18.7774 14.6447 19.0702 15.1659 19.5914C15.6871 20.1125 15.9798 20.8194 15.9798 21.5564ZM15.9798 21.5564V11.83M17.814 10.5169L20.8847 11.5382C21.6281 11.7883 22.2395 12.6289 22.2395 13.414V14.2268C22.2395 15.2898 21.4197 15.8803 20.4123 15.5469L17.3415 14.5256C16.5982 14.2755 15.9868 13.4348 15.9868 12.6498V11.83C15.9798 10.774 16.8066 10.1765 17.814 10.5169Z" stroke="white" stroke-width="1.56318" stroke-linecap="round" stroke-linejoin="round"/>
+              </g>
+              <defs>
+              <filter id="filter0_b_1011_4733" x="-4.16847" y="-4.16847" width="40.9971" height="43.0935" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+              <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+              <feGaussianBlur in="BackgroundImageFix" stdDeviation="2.08424"/>
+              <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_1011_4733"/>
+              <feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_1011_4733" result="shape"/>
+              </filter>
+              </defs>
+            </svg>
+            <svg id="svg-2" width="151" height="155" viewBox="0 0 151 155" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g filter="url(#filter0_bd_1011_4737)">
+              <rect x="46.6797" y="42.0242" width="58.32" height="62.0262" rx="12.3822" fill="#7E1ECB" fill-opacity="0.3" shape-rendering="crispEdges"/>
+              <path d="M89.5228 80.5242V61.6414C89.5228 57.6172 86.9999 57.06 84.4461 57.7565L74.788 60.3877C73.0236 60.8675 71.8163 62.2605 71.8163 64.2726V83.7281M89.5228 80.5242C89.5228 81.805 89.014 83.0333 88.1084 83.9389C87.2028 84.8445 85.9745 85.3533 84.6937 85.3533C83.413 85.3533 82.1847 84.8445 81.2791 83.9389C80.3735 83.0333 79.8647 81.805 79.8647 80.5242C79.8647 79.2435 80.3735 78.0152 81.2791 77.1096C82.1847 76.204 83.413 75.6952 84.6937 75.6952C85.9745 75.6952 87.2028 76.204 88.1084 77.1096C89.014 78.0152 89.5228 79.2435 89.5228 80.5242ZM71.8163 69.2565L89.5228 64.4274M66.9872 88.5726C68.268 88.5726 69.4963 88.0639 70.4019 87.1582C71.3075 86.2526 71.8163 85.0243 71.8163 83.7436C71.8163 82.4629 71.3075 81.2346 70.4019 80.3289C69.4963 79.4233 68.268 78.9146 66.9872 78.9146C65.7065 78.9146 64.4782 79.4233 63.5726 80.3289C62.667 81.2346 62.1582 82.4629 62.1582 83.7436C62.1582 85.0243 62.667 86.2526 63.5726 87.1582C64.4782 88.0639 65.7065 88.5726 66.9872 88.5726Z" stroke="#FCFDFF" stroke-width="2.32166" stroke-linecap="round" stroke-linejoin="round"/>
+              </g>
+              <defs>
+              <filter id="filter0_bd_1011_4737" x="0.679688" y="0.0241699" width="150.32" height="154.026" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+              <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+              <feGaussianBlur in="BackgroundImageFix" stdDeviation="3.09554"/>
+              <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_1011_4737"/>
+              <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+              <feOffset dy="4"/>
+              <feGaussianBlur stdDeviation="23"/>
+              <feComposite in2="hardAlpha" operator="out"/>
+              <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.3 0"/>
+              <feBlend mode="normal" in2="effect1_backgroundBlur_1011_4737" result="effect2_dropShadow_1011_4737"/>
+              <feBlend mode="normal" in="SourceGraphic" in2="effect2_dropShadow_1011_4737" result="shape"/>
+              </filter>
+              </defs>
+            </svg>
+            <svg id="svg-3" width="27" height="28" viewBox="0 0 27 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g filter="url(#filter0_b_1011_4741)">
+              <rect width="26.32" height="27.9926" rx="5.58811" fill="#7E1ECB" fill-opacity="0.3"/>
+              <path d="M19.3341 17.3752V8.85332C19.3341 7.03719 18.1955 6.78572 17.043 7.10005L12.6842 8.28753C11.8879 8.50406 11.3431 9.13273 11.3431 10.0408V18.8211M19.3341 17.3752C19.3341 17.9532 19.1045 18.5075 18.6958 18.9162C18.2871 19.3249 17.7327 19.5546 17.1547 19.5546C16.5767 19.5546 16.0224 19.3249 15.6137 18.9162C15.205 18.5075 14.9754 17.9532 14.9754 17.3752C14.9754 16.7972 15.205 16.2429 15.6137 15.8341C16.0224 15.4254 16.5767 15.1958 17.1547 15.1958C17.7327 15.1958 18.2871 15.4254 18.6958 15.8341C19.1045 16.2429 19.3341 16.7972 19.3341 17.3752ZM11.3431 12.29L19.3341 10.1106M9.16374 21.0075C9.74174 21.0075 10.2961 20.7779 10.7048 20.3691C11.1135 19.9604 11.3431 19.4061 11.3431 18.8281C11.3431 18.2501 11.1135 17.6958 10.7048 17.2871C10.2961 16.8783 9.74174 16.6487 9.16374 16.6487C8.58574 16.6487 8.03141 16.8783 7.6227 17.2871C7.21399 17.6958 6.98438 18.2501 6.98438 18.8281C6.98438 19.4061 7.21399 19.9604 7.6227 20.3691C8.03141 20.7779 8.58574 21.0075 9.16374 21.0075Z" stroke="#FCFDFF" stroke-width="1.04777" stroke-linecap="round" stroke-linejoin="round"/>
+              </g>
+              <defs>
+              <filter id="filter0_b_1011_4741" x="-4" y="-4" width="34.3203" height="35.9927" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+              <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+              <feGaussianBlur in="BackgroundImageFix" stdDeviation="2"/>
+              <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_1011_4741"/>
+              <feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_1011_4741" result="shape"/>
+              </filter>
+              </defs>
+            </svg>
+            <svg id="svg-4" width="46" height="49" viewBox="0 0 46 49" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g filter="url(#filter0_b_1011_4743)">
+              <rect width="45.68" height="48.583" rx="9.69851" fill="#7E1ECB" fill-opacity="0.3"/>
+              <path d="M33.5568 30.1558V15.3656C33.5568 12.2136 31.5807 11.7771 29.5804 12.3227L22.0155 14.3836C20.6335 14.7594 19.6879 15.8505 19.6879 17.4265V32.6653M33.5568 30.1558C33.5568 31.159 33.1583 32.121 32.4489 32.8304C31.7396 33.5397 30.7775 33.9382 29.7743 33.9382C28.7712 33.9382 27.8091 33.5397 27.0998 32.8304C26.3904 32.121 25.9919 31.159 25.9919 30.1558C25.9919 29.1526 26.3904 28.1906 27.0998 27.4812C27.8091 26.7719 28.7712 26.3734 29.7743 26.3734C30.7775 26.3734 31.7396 26.7719 32.4489 27.4812C33.1583 28.1906 33.5568 29.1526 33.5568 30.1558ZM19.6879 21.3302L33.5568 17.5477M15.9055 36.4598C16.9086 36.4598 17.8707 36.0613 18.58 35.352C19.2894 34.6427 19.6879 33.6806 19.6879 32.6774C19.6879 31.6743 19.2894 30.7122 18.58 30.0028C17.8707 29.2935 16.9086 28.895 15.9055 28.895C14.9023 28.895 13.9402 29.2935 13.2309 30.0028C12.5216 30.7122 12.123 31.6743 12.123 32.6774C12.123 33.6806 12.5216 34.6427 13.2309 35.352C13.9402 36.0613 14.9023 36.4598 15.9055 36.4598Z" stroke="#FCFDFF" stroke-width="1.81847" stroke-linecap="round" stroke-linejoin="round"/>
+              </g>
+              <defs>
+              <filter id="filter0_b_1011_4743" x="-6.45198" y="-6.45198" width="58.5836" height="61.487" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+              <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+              <feGaussianBlur in="BackgroundImageFix" stdDeviation="3.22599"/>
+              <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_1011_4743"/>
+              <feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_1011_4743" result="shape"/>
+              </filter>
+              </defs>
+            </svg>
+            <svg id="svg-5" width="49" height="52" viewBox="0 0 49 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g filter="url(#filter0_b_1011_4735)">
+              <rect width="48.7368" height="51.8655" rx="12.4408" fill="#7E1ECB" fill-opacity="0.3"/>
+              <path d="M23.8446 32.1676C23.8446 33.2674 23.4077 34.3222 22.63 35.0999C21.8523 35.8776 20.7975 36.3145 19.6977 36.3145C18.5979 36.3145 17.5431 35.8776 16.7654 35.0999C15.9877 34.3222 15.5508 33.2674 15.5508 32.1676C15.5508 31.0678 15.9877 30.013 16.7654 29.2353C17.5431 28.4576 18.5979 28.0207 19.6977 28.0207C20.7975 28.0207 21.8523 28.4576 22.63 29.2353C23.4077 30.013 23.8446 31.0678 23.8446 32.1676ZM23.8446 32.1676V17.6533M26.5816 15.6939L31.164 17.2179C32.2733 17.5911 33.1856 18.8456 33.1856 20.0171V21.2301C33.1856 22.8163 31.9622 23.6975 30.459 23.1999L25.8766 21.6759C24.7673 21.3026 23.855 20.0482 23.855 18.8767V17.6533C23.8446 16.0775 25.0783 15.1859 26.5816 15.6939Z" stroke="white" stroke-width="2.33265" stroke-linecap="round" stroke-linejoin="round"/>
+              </g>
+              <defs>
+              <filter id="filter0_b_1011_4735" x="-6.22039" y="-6.22039" width="61.1771" height="64.3063" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+              <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+              <feGaussianBlur in="BackgroundImageFix" stdDeviation="3.1102"/>
+              <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_1011_4735"/>
+              <feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_1011_4735" result="shape"/>
+              </filter>
+              </defs>
+            </svg>
+            <svg id="svg-6" width="38" height="41" viewBox="0 0 38 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g filter="url(#filter0_b_1011_4739)">
+              <rect width="37.68" height="40.0746" rx="8" fill="#7E1ECB" fill-opacity="0.3"/>
+              <path d="M27.68 24.8746V12.6746C27.68 10.0746 26.05 9.71456 24.4 10.1646L18.16 11.8646C17.02 12.1746 16.24 13.0746 16.24 14.3746V26.9446M27.68 24.8746C27.68 25.702 27.3513 26.4956 26.7662 27.0807C26.1811 27.6658 25.3875 27.9946 24.56 27.9946C23.7325 27.9946 22.9389 27.6658 22.3538 27.0807C21.7687 26.4956 21.44 25.702 21.44 24.8746C21.44 24.0471 21.7687 23.2535 22.3538 22.6684C22.9389 22.0833 23.7325 21.7546 24.56 21.7546C25.3875 21.7546 26.1811 22.0833 26.7662 22.6684C27.3513 23.2535 27.68 24.0471 27.68 24.8746ZM16.24 17.5946L27.68 14.4746M13.12 30.0746C13.9475 30.0746 14.7411 29.7458 15.3262 29.1607C15.9113 28.5756 16.24 27.782 16.24 26.9546C16.24 26.1271 15.9113 25.3335 15.3262 24.7484C14.7411 24.1633 13.9475 23.8346 13.12 23.8346C12.2925 23.8346 11.4989 24.1633 10.9138 24.7484C10.3287 25.3335 10 26.1271 10 26.9546C10 27.782 10.3287 28.5756 10.9138 29.1607C11.4989 29.7458 12.2925 30.0746 13.12 30.0746Z" stroke="#FCFDFF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+              </g>
+              <defs>
+              <filter id="filter0_b_1011_4739" x="-4" y="-4" width="45.6797" height="48.0746" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+              <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+              <feGaussianBlur in="BackgroundImageFix" stdDeviation="2"/>
+              <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_1011_4739"/>
+              <feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_1011_4739" result="shape"/>
+              </filter>
+              </defs>
+            </svg>
+          </div>
+          <svg class="svg-human" width="652" height="619" viewBox="0 0 652 619" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <rect width="651.357" height="619.058" fill="url(#pattern0)"/>
           <defs>
           <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
@@ -106,5 +219,7 @@
         </div>
       </div>
     </section>
+
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
