--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Líria</title>
 
-    <link rel="stylesheet" href="styles/desktop.css">
     <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/mobile.css">
+    <link rel="stylesheet" href="styles/desktop/others.css">
+    <link rel="stylesheet" href="styles/desktop/header.css">
+    <link rel="stylesheet" href="styles/desktop/section1.css">
+    <link rel="stylesheet" href="styles/mobile/header.css">
+    <link rel="stylesheet" href="styles/mobile/section1.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
