feat: Adicionando a seção 2 no site.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/desktop/others.css">
     <link rel="stylesheet" href="styles/desktop/header.css">
     <link rel="stylesheet" href="styles/desktop/section1.css">
+    <link rel="stylesheet" href="styles/desktop/section2.css">
     <link rel="stylesheet" href="styles/mobile/header.css">
     <link rel="stylesheet" href="styles/mobile/section1.css">
 
@@ -220,6 +221,23 @@
           </defs>
           </svg>
         </div>
+      </div>
+    </section>
+    <section class="section-two">
+      <div class="div-project">
+        <h2>Transformação através da música</h2>
+        <p>
+          A Associação Cultural Líria surgiu com a iniciativa de suas fundadoras, Dayane de Paula e Débora Lima, no ano de 2017, com o objetivo de, através da música, transformar a vida de crianças e adolescentes que sofrem todo o tipo de violência no município de Almirante Tamandaré.
+        </p>
+        <p>
+          Surgimos com o objetivo de oferecer a estes jovens, oportunidades de desenvolver aptidões musicais, além de promover saúde mental e emocional.
+        </p>
+        <p>
+          Hoje conduzido por Samuel Lima nosso projeto tem o objetivo de desenvolver, com a participação de alunos e parceiros, conteúdo audiovisual para promover outras iniciativas sociais. Dessa forma, desenvolvemos aptidões técnicas e criativas dos envolvidos e fomentamos as boas práticas do terceiro setor, através de um trabalho colaborativo e de impacto social.
+        </p>
+      </div>
+      <div>
+        <img src="asserts/img_section_two_513_x_497.png" alt="Imagem dos alunos da ong Lira MusiCausa" />
       </div>
     </section>
 
