feat: Adicionando a 3° seção do projeto.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/desktop/section2.css">
     <link rel="stylesheet" href="styles/mobile/header.css">
     <link rel="stylesheet" href="styles/mobile/section1.css">
+    <link rel="stylesheet" href="styles/mobile/section2.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -226,6 +227,9 @@
     <section class="section-two">
       <div class="div-project">
         <h2>Transformação através da música</h2>
+        <div class="div-project-img-res">
+          <img src="asserts/img_section_two_513_x_497.png" alt="Imagem dos alunos da ong Lira MusiCausa" />
+        </div>
         <p>
           A Associação Cultural Líria surgiu com a iniciativa de suas fundadoras, Dayane de Paula e Débora Lima, no ano de 2017, com o objetivo de, através da música, transformar a vida de crianças e adolescentes que sofrem todo o tipo de violência no município de Almirante Tamandaré.
         </p>
@@ -236,7 +240,7 @@
           Hoje conduzido por Samuel Lima nosso projeto tem o objetivo de desenvolver, com a participação de alunos e parceiros, conteúdo audiovisual para promover outras iniciativas sociais. Dessa forma, desenvolvemos aptidões técnicas e criativas dos envolvidos e fomentamos as boas práticas do terceiro setor, através de um trabalho colaborativo e de impacto social.
         </p>
       </div>
-      <div>
+      <div class="div-project-img">
         <img src="asserts/img_section_two_513_x_497.png" alt="Imagem dos alunos da ong Lira MusiCausa" />
       </div>
     </section>
