feat: Adicionando a seção 3 ao site e suas responsividade.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <link rel="stylesheet" href="styles/desktop/header.css">
     <link rel="stylesheet" href="styles/desktop/section1.css">
     <link rel="stylesheet" href="styles/desktop/section2.css">
+    <link rel="stylesheet" href="styles/desktop/section3.css">
+
     <link rel="stylesheet" href="styles/mobile/header.css">
     <link rel="stylesheet" href="styles/mobile/section1.css">
     <link rel="stylesheet" href="styles/mobile/section2.css">
+    <link rel="stylesheet" href="styles/mobile/section3.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -260,7 +263,24 @@
         <img src="asserts/img_section_two_513_x_497.png" alt="Imagem dos alunos da ong Lira MusiCausa" />
       </div>
     </section>
-
+    <section class="section-tree">
+      <div class="div-apresentation-title">
+        <h2>Nossos Projetos</h2>
+        <p>Nosso projeto se divide em duas vertentes como descritos abaixo.</p>
+      </div>
+      <div class="div-apresentations">
+        <div class="div-apresentation-one">
+          <img src="./asserts/apresentation_one.svg" alt="Imagem de svg de musica da ong Líria">
+          <h3>Proporcionar ensino e prática de música, criação e composição musical</h3>
+          <p>Tem como objetivo promover o ensino, prática e profissionalização de pessoas em situação de vulnerabilidade social, proporcionando a oportunidade de desenvolver aptidões musicais, promovendo saúde mental e emocional, enquanto ajuda instituições através da música.</p>
+        </div>
+        <div class="div-apresentation-two">
+          <img src="./asserts/apresentation_two.svg" alt="Imagem de svg de musica da ong Líria">
+          <h3>Produção de conteúdo sobre tons isocronicos</h3>
+          <p>Difundir e Produzir a ferramenta dos Tons Isocrônicos como tecnologia de treinamento cerebral, considerada uma das mais eficientes técnicas de estimulação de ondas cerebrais, voltada para o aprendizado.</p>
+        </div>
+      </div>
+    </section>
     <script src="./scripts/script.js"></script>
 </body>
 </html>
