feat: Adicionando animação de scroll na seção 3.

--- a/index.html
+++ b/index.html
@@ -265,16 +265,26 @@
     </section>
     <section class="section-tree">
       <div class="div-apresentation-title">
-        <h2>Nossos Projetos</h2>
-        <p>Nosso projeto se divide em duas vertentes como descritos abaixo.</p>
+        <h2 data-aos="zoom-in-up">Nossos Projetos</h2>
+        <p data-aos="zoom-in-down">Nosso projeto se divide em duas vertentes como descritos abaixo.</p>
       </div>
       <div class="div-apresentations">
-        <div class="div-apresentation-one">
+        <div
+          class="div-apresentation-one"
+          data-aos="fade-right"
+          data-aos-delay="200"
+          data-aos-duration="800"
+        >
           <img src="./asserts/apresentation_one.svg" alt="Imagem de svg de musica da ong Líria">
           <h3>Proporcionar ensino e prática de música, criação e composição musical</h3>
           <p>Tem como objetivo promover o ensino, prática e profissionalização de pessoas em situação de vulnerabilidade social, proporcionando a oportunidade de desenvolver aptidões musicais, promovendo saúde mental e emocional, enquanto ajuda instituições através da música.</p>
         </div>
-        <div class="div-apresentation-two">
+        <div
+          class="div-apresentation-two"
+          data-aos="fade-left"
+          data-aos-delay="200"
+          data-aos-duration="800"
+        >
           <img src="./asserts/apresentation_two.svg" alt="Imagem de svg de musica da ong Líria">
           <h3>Produção de conteúdo sobre tons isocronicos</h3>
           <p>Difundir e Produzir a ferramenta dos Tons Isocrônicos como tecnologia de treinamento cerebral, considerada uma das mais eficientes técnicas de estimulação de ondas cerebrais, voltada para o aprendizado.</p>
