feat: Adicionando a seção de anuncio da comunidade do discord.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <link rel="stylesheet" href="styles/desktop/section1.css">
     <link rel="stylesheet" href="styles/desktop/section2.css">
     <link rel="stylesheet" href="styles/desktop/section3.css">
+    <link rel="stylesheet" href="styles/desktop/section4.css">
 
     <link rel="stylesheet" href="styles/mobile/header.css">
     <link rel="stylesheet" href="styles/mobile/section1.css">
     <link rel="stylesheet" href="styles/mobile/section2.css">
     <link rel="stylesheet" href="styles/mobile/section3.css">
+    <link rel="stylesheet" href="styles/mobile/section4.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -272,7 +274,7 @@
         <div
           class="div-apresentation-one"
           data-aos="fade-right"
-          data-aos-delay="200"
+          data-aos-delay="400"
           data-aos-duration="800"
         >
           <img src="./asserts/apresentation_one.svg" alt="Imagem de svg de musica da ong Líria">
@@ -282,13 +284,29 @@
         <div
           class="div-apresentation-two"
           data-aos="fade-left"
-          data-aos-delay="200"
+          data-aos-delay="400"
           data-aos-duration="800"
         >
           <img src="./asserts/apresentation_two.svg" alt="Imagem de svg de musica da ong Líria">
           <h3>Produção de conteúdo sobre tons isocronicos</h3>
           <p>Difundir e Produzir a ferramenta dos Tons Isocrônicos como tecnologia de treinamento cerebral, considerada uma das mais eficientes técnicas de estimulação de ondas cerebrais, voltada para o aprendizado.</p>
         </div>
+      </div>
+    </section>
+    <section class="section-for">
+      <div class="div-discord-title">
+        <img src="./asserts/icon_discord.svg" width="82.68" alt="icone do discord">
+        <h2>Conheça nossa comunidade no Discord</h2>
+      </div>
+      <div class="div-discord-info">
+        <p>Estamos implementando um novo modelo de interação com nossos parceiros e alunos, com a proposta de aliar nossa frente criativa com as ações de sua iniciativa, criando conteúdo audiovisual exclusivo, promovendo nossas causas mutuamente.</p>
+      </div>
+      <div class="div-discord-btn">
+        <span>Caso tenha interesse em participar, clique no botão abaixo:</span>
+        <button>
+          <img src="./asserts/icon_discord_41_x_31.svg" id="svg_discord" alt="Icone do discord dentro do botão">
+          Entrar na comunidade
+        </button>
       </div>
     </section>
     <script src="./scripts/script.js"></script>
