--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
     <link rel="stylesheet" href="styles/desktop/section2.css">
     <link rel="stylesheet" href="styles/desktop/section3.css">
     <link rel="stylesheet" href="styles/desktop/section4.css">
+    <link rel="stylesheet" href="styles/desktop/footer.css">
 
     <link rel="stylesheet" href="styles/mobile/header.css">
     <link rel="stylesheet" href="styles/mobile/section1.css">
     <link rel="stylesheet" href="styles/mobile/section2.css">
     <link rel="stylesheet" href="styles/mobile/section3.css">
     <link rel="stylesheet" href="styles/mobile/section4.css">
+    <link rel="stylesheet" href="styles/mobile/footer.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Katibeh&family=Roboto:wght@300&display=swap" rel="stylesheet">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </head>
@@ -309,6 +312,33 @@
         </button>
       </div>
     </section>
+    <footer class="footer">
+      <div class="div-contact">
+        <div><img src="./asserts/logo_liria_rodape.svg" alt="logo da ong Líria" /></div>
+        <nav class="footer-nav">
+          <ul>
+            <li>Entrar em contato</li>
+            <li>Nossa História</li>
+            <li>Projetos</li>
+            <li>Comunidade</li>
+            <li>Como você pode nos ajudar</li>
+          </ul>
+        </nav>
+        <nav class="footer-nav-icons">
+          <ul>
+            <li><i class="fa-brands fa-facebook-f"></i></li>
+            <li><i class="fa-brands fa-instagram"></i></li>
+            <li><i class="fa-brands fa-linkedin"></i></li>
+            <li><i class="fa-brands fa-tiktok"></i></li>
+            <li><i class="fa-brands fa-telegram"></i></li>
+          </ul>
+        </nav>
+      </div>
+      <hr class="footer-hr">
+      <div class="div-authorship">
+        <p>2023 Instituto Líria, Todos os direiros reservados.</p>
+      </div>
+    </footer>
     <script src="./scripts/script.js"></script>
 </body>
 </html>
