feat: Adicionando os links de facebook e instagram.

--- a/index.html
+++ b/index.html
@@ -326,8 +326,20 @@
         </nav>
         <nav class="footer-nav-icons">
           <ul>
-            <li><i class="fa-brands fa-facebook-f"></i></li>
-            <li><i class="fa-brands fa-instagram"></i></li>
+            <li>
+              <a
+                href="https://www.facebook.com/projetoliria?mibextid=PzaGJu" target="_blank"
+              >
+                <i class="fa-brands fa-facebook-f"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://instagram.com/liriacultural?igshid=MTNiYzNiMzkwZA==" target="_blank"
+              >
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </li>
             <li><i class="fa-brands fa-linkedin"></i></li>
             <li><i class="fa-brands fa-tiktok"></i></li>
             <li><i class="fa-brands fa-telegram"></i></li>
