feat: Adiconando links internos.

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
       </div>
       <nav class="header-nav" data-aos="fade-up">
         <ul>
-          <li>Nossa História</li>
-          <li>Projetos</li>
-          <li>Como você pode nos ajudar</li>
+          <li><a href="#section-history">Nossa História</a></li>
+          <li><a href="#section-project">Projetos</a></li>
+          <li><a href="#">Como você pode nos ajudar</a></li>
         </ul>
         <ul>
-          <li>Nossa comunidade</li>
+          <li><a href="#section-community">Nossa comunidade</a></li>
           <li>
             <button class="nav-button">
               Entrar em contato
@@ -246,7 +246,7 @@
         </div>
       </div>
     </section>
-    <section class="section-two">
+    <section class="section-two" id="section-history">
       <div class="div-project">
         <h2 data-aos="fade-right" data-aos-delay="200" data-aos-duration="300">
           Transformação através da música
@@ -268,7 +268,7 @@
         <img src="asserts/img_section_two_513_x_497.png" alt="Imagem dos alunos da ong Lira MusiCausa" />
       </div>
     </section>
-    <section class="section-tree">
+    <section class="section-tree" id="section-project">
       <div class="div-apresentation-title">
         <h2 data-aos="zoom-in-up">Nossos Projetos</h2>
         <p data-aos="zoom-in-down">Nosso projeto se divide em duas vertentes como descritos abaixo.</p>
@@ -296,7 +296,7 @@
         </div>
       </div>
     </section>
-    <section class="section-for">
+    <section class="section-for" id="section-community">
       <div class="div-discord-title">
         <img src="./asserts/icon_discord.svg" width="82.68" alt="icone do discord">
         <h2>Conheça nossa comunidade no Discord</h2>
@@ -318,9 +318,9 @@
         <nav class="footer-nav">
           <ul>
             <li>Entrar em contato</li>
-            <li>Nossa História</li>
-            <li>Projetos</li>
-            <li>Comunidade</li>
+            <li><a href="#section-history">Nossa História</a></li>
+            <li><a href="#section-project">Projetos</a></li>
+            <li><a href="#section-community">Comunidade</a></li>
             <li>Como você pode nos ajudar</li>
           </ul>
         </nav>
