feat: Adicionando icone de whatsapp e links internos.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <li><a href="#section-community">Nossa comunidade</a></li>
           <li>
             <button class="nav-button">
-              Entrar em contato
+              <a href="#"><i class="fa-brands fa-whatsapp"></i>Entrar em contato</a>
             </button>
           </li>
         </ul>
@@ -65,21 +65,21 @@
       </button>
       <nav class="header-nav-responsive">
         <ul>
-          <li>Nossa História</li>
-          <li>Projetos</li>
+          <li><a href="#section-history">Nossa História</a></li>
+          <li><a href="#section-project">Projetos</a></li>
           <li>Como você pode nos ajudar</li>
         </ul>
         <ul>
-          <li>Nossa comunidade</li>
+          <li><a href="#section-community">Nossa comunidade</a></li>
           <li>
             <button class="nav-button">
-              Entrar em contato
+              <a href="#"><i class="fa-brands fa-whatsapp"></i>Entrar em contato</a>
             </button>
           </li>
         </ul>
       </nav>
     </header>
-    <section class="section-one">
+    <section class="section-one" id="section-contact">
       <div
         class="div-info"
         data-aos="fade-right"
@@ -109,7 +109,7 @@
         </div>
         <div class="div-info-tree">
           <button class="section-one-button button-one">
-            Entrar em contato
+            <a href="#"><i class="fa-brands fa-whatsapp"></i>Entrar em contato</a>
           </button>
           <button class="section-one-button button-two">
             Nossa comunidade
@@ -317,10 +317,10 @@
         <div><img src="./asserts/logo_liria_rodape.svg" alt="logo da ong Líria" /></div>
         <nav class="footer-nav">
           <ul>
-            <li>Entrar em contato</li>
+            <li><a href="#section-contact">Entrar em contato</a></li>
             <li><a href="#section-history">Nossa História</a></li>
             <li><a href="#section-project">Projetos</a></li>
-            <li><a href="#section-community">Comunidade</a></li>
+            <!-- <li><a href="#section-community">Comunidade</a></li> -->
             <li>Como você pode nos ajudar</li>
           </ul>
         </nav>
