ci: Mudanças e melhorias em experiência do usuario.

--- a/index.html
+++ b/index.html
@@ -270,15 +270,14 @@
     </section>
     <section class="section-tree" id="section-project">
       <div class="div-apresentation-title">
-        <h2 data-aos="zoom-in-up">Nossos Projetos</h2>
-        <p data-aos="zoom-in-down">Nosso projeto se divide em duas vertentes como descritos abaixo.</p>
+        <h2 data-aos="fade-up-right">Nossos Projetos</h2>
+        <p data-aos="fade-down-left">Nosso projeto se divide em duas vertentes como descritos abaixo.</p>
       </div>
       <div class="div-apresentations">
         <div
           class="div-apresentation-one"
           data-aos="fade-right"
-          data-aos-delay="400"
-          data-aos-duration="800"
+          data-aos-delay="300"
         >
           <img src="./asserts/apresentation_one.svg" alt="Imagem de svg de musica da ong Líria">
           <h3>Proporcionar ensino e prática de música, criação e composição musical</h3>
@@ -287,8 +286,7 @@
         <div
           class="div-apresentation-two"
           data-aos="fade-left"
-          data-aos-delay="400"
-          data-aos-duration="800"
+          data-aos-delay="300"
         >
           <img src="./asserts/apresentation_two.svg" alt="Imagem de svg de musica da ong Líria">
           <h3>Produção de conteúdo sobre tons isocronicos</h3>
